mobilerobotics_ws/log/build_2023-11-28_12-05-14/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 221
    print("-------------------")
    ^
SyntaxError: invalid syntax

